# dyngeseth-home

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json
.github/workflows/: azure-static-web-apps-yellow-beach-0d4a4e903.yml  deploy.yml
api/: build.mjs  local.settings.json.example  package-lock.json  package.json  tsconfig.json
api/src/functions/: health.ts  transcribe.ts
api/src/lib/: rateLimit.ts  validate.ts  whisper.ts
dyngeseth/: index.html  package.json
dyngeseth/src/: index.css
dyngeseth/src/components/: Footer.tsx  Hero.module.css  Hero.tsx  Nav.tsx  Transcriber.module.css
lytt-bridge/: .env.example  Cargo.toml
lytt-bridge/src/: app_state.rs  config.rs  error.rs  main.rs
lytt-bridge/src/routes/: health.rs  mod.rs  transcribe.rs
public/: staticwebapp.config.json
src/: App.tsx  index.css  speech.d.ts
src/components/: Contact.module.css  Contact.tsx  Footer.module.css  Hero.tsx  Nav.module.css  Nav.tsx  Transcriber.module.css  Transcriber.tsx
src/hooks/: useTranscriber.ts
