[package]
name        = "lytt-bridge"
version     = "0.1.0"
edition     = "2021"
description = "Local Whisper transcription bridge for dyngeseth.no"

[[bin]]
name = "lytt-bridge"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
axum               = { version = "0.7", features = ["multipart"] }
clap               = { version = "4",   features = ["derive", "env"] }
dotenvy            = "0.15"
reqwest            = { version = "0.12", features = ["json", "multipart"] }
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
tokio              = { version = "1",   features = ["full"] }
tower-http         = { version = "0.5", features = ["cors", "trace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
